# gtk4-rs_training

./: README.md
C_lang_gtk4/: README.md  justfile
C_lang_gtk4/001_Gtk4-tutorial/: README.md
C_lang_gtk4/001_Gtk4-tutorial/chapter001/: README.md
C_lang_gtk4/001_Gtk4-tutorial/chapter001/a01_hello_gtk4/: justfile
C_lang_gtk4/001_Gtk4-tutorial/chapter001/a01_hello_gtk4/src/: main.c
C_lang_gtk4/001_Gtk4-tutorial/chapter001/a02_g_signal_connect/src/: main.c
C_lang_gtk4/001_Gtk4-tutorial/chapter001/a03_helloworld_c/src/: main.c
C_lang_gtk4/001_Gtk4-tutorial/chapter001/a04_packing_btn/src/: main.c
C_lang_gtk4/001_Gtk4-tutorial/chapter001/a05_drawing/: README.md
C_lang_gtk4/001_Gtk4-tutorial/chapter001/a05_drawing/src/: main.c
C_lang_gtk4/002_Gobject_tutorial/: README.md
C_lang_gtk4/002_Gobject_tutorial/a01_gobject/: README.md
C_lang_gtk4/002_Gobject_tutorial/a01_gobject/src/: main.c
C_lang_gtk4/002_Gobject_tutorial/a02_glib_dynamic_type_system/src/: main.c
C_lang_gtk4/a01_multithreading_gtk4_c/: justfile
C_lang_gtk4/a01_multithreading_gtk4_c/src/: main.c
Cpp_lang_gtk4/: README.md  justfile
Cpp_lang_gtk4/a01_multithreading_gtk4/: CMakeLists.txt  justfile
Cpp_lang_gtk4/a01_multithreading_gtk4/src/: main.cpp
Cpp_lang_gtk4/a01_multithreading_gtk4/src/modules/: capture.app.ixx  capture.cameras.ixx  capture.gui.ixx
Cpp_lang_gtk4/a01_sample_code/: CMakeLists.txt
Cpp_lang_gtk4/a01_sample_code/src/: helloworld.cpp  main.cpp
Cpp_lang_gtk4/a01_sample_code/src/headers/: helloworld.h
Cpp_lang_gtk4/a02_final_gtk4/: justfile
Cpp_lang_gtk4/a02_final_gtk4/src/: main.cpp
Cpp_lang_gtk4/a02_final_gtk4/src/modules/: gtk_app.ixx  gtk_window.ixx
Cpp_lang_gtk4/a03_final_gtk4_doc/: CMakeLists.txt  README.md  justfile
Cpp_lang_gtk4/a03_final_gtk4_doc/src/: helloworld.cpp
Cpp_lang_gtk4/a03_final_gtk4_doc/src/headers/: helloworld.h
Rust_lang_gtk4/a01_hello_gtk4/: Cargo.toml
Rust_lang_gtk4/a01_hello_gtk4/src/: main.rs
Zig_lang_gtk4/: README.md
